--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
+	<div class="bg-image"></div>
 	<div id="wrapper">
 	  	<header id="header">
 	    	<h1>Pratik Mangalore</h1>
@@ -26,11 +27,11 @@
 	  	</header>
 	    <div id="content" class="clearfix">
 	      	<section id="left-sidebar">
-	        	<p>Left Sidebar Content Goes Here</p>
+	        	<p></p>
 	      	</section>
 	             
 	      	<section id="right">
-	        	<p>Right Side Content Goes Here</p>
+	        	<p></p>
 	      	</section>
 	    </div>
 	         
