Created basic website layout

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	    	<nav class="navigation">
 				<ul>
 				<li><a href="#">Home</a></li>
-				<li><a href="#">Services</a></li>
+				<li><a href="#">Resume</a></li>
 				<li><a href="#">Blog</a></li>
 				<li><a href="#">Contact</a></li>
 				</ul>
@@ -27,7 +27,9 @@
 	  	</header>
 	    <div id="content" class="clearfix">
 	      	<section id="left-sidebar">
-	        	<p></p>
+	        	<div id = "profile-picture-wrapper">
+	        		<img id = "DP" src = "images/profile_picture.jpg">
+	        	</div>
 	      	</section>
 	             
 	      	<section id="right">
