--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@
 	      	</section>
 	             
 	      	<section id="right">
-	        	<p></p>
+	        	<div id = "about">
+	        		<p>Hello! I am a first year graduate student pursuing my Master's in Computer Science at the University of California, Los Angeles. I am keenly interested in Machine Learning, Statistical Modelling, Artificial Intelligence, and building clean, scalable software. <br><br> <u>To the Recruiter</u>: - Please find my resume by clicking the button displayed above. Feel free to contact me if you believe I can contribute to your organization! <br><br> To the curious Reader: - I enjoy chess and like to read and write about interesting articles in the domains of Machine Learning, Human Evolution, Cognitive Science and Philosophy to name a few! Feel free to contact me via mail.</p>
+	        	</div>
+	        	<div id = "chess-puzzle">
+	        		<iframe border="0" frameborder="0" allowtransparency="true" width="603" height="465" src="//www.chess.com/emboard?id=4882904"></iframe>
+	        	</div>
 	      	</section>
 	    </div>
 	         
