--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
 	        	<div id = "about">
 	        		<p>Hello! I am a first year graduate student pursuing my Master's in Computer Science at the University of California, Los Angeles. I am keenly interested in Machine Learning, Statistical Modelling, Artificial Intelligence, and building clean, scalable software. <br><br> <u>To the Recruiter</u>: - Please find my resume by clicking the button displayed above. Feel free to contact me if you believe I can contribute to your organization! <br><br> To the curious Reader: - I enjoy chess and like to read and write about interesting articles in the domains of Machine Learning, Human Evolution, Cognitive Science and Philosophy to name a few! Feel free to contact me via mail.</p>
 	        	</div>
+	        	<div id = "chess-ques">
+	        		<p>By playing what move can white checkmate black in 1?</p>
+	        	</div>
+	        	<div id = "chess-puzzle">
+	        		<img id = "chess_puzzle" src = "images/chess_puzzle.png">
+	        	</div>
 	      	</section>
 	    </div>
 	         
