Added Contacts Page

--- a/contact_page.html
+++ b/contact_page.html
@@ -20,7 +20,7 @@
 	    	<h1>Pratik Mangalore</h1>
 	    	<nav class="navigation">
 				<ul>
-				<li><a href="#">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li><a href="#">Resume</a></li>
 				<li><a href="#">Blog</a></li>
 				<li><a href="contact_page.html">Contact</a></li>
@@ -34,16 +34,15 @@
 	        	</div>
 	      	</section>
 	             
-	      	<section id="right">
-	        	<div id = "about">
-	        		<p>Hello! I am a first year graduate student pursuing my Master's in Computer Science at the University of California, Los Angeles. I am keenly interested in Machine Learning, Statistical Modelling, Artificial Intelligence, and building clean, scalable software. <br><br> <u>To the Recruiter</u>: - Please find my resume by clicking the button displayed above. Feel free to contact me if you believe I can contribute to your organization! <br><br> To the curious Reader: - I enjoy chess and like to read and write about interesting articles in the domains of Machine Learning, Human Evolution, Cognitive Science and Philosophy to name a few! Feel free to contact me via mail.</p>
-	        	</div>
-	        	<div id = "chess-ques">
-	        		<p>By playing what move can white checkmate black in 1?</p>
-	        	</div>
-	        	<div id = "chess-puzzle">
-	        		<img id = "chess_puzzle" src = "images/chess_puzzle.png">
-	        	</div>
+	      	<section id="contacts">
+	        	<nav class="contact-navigation">
+	        	<ul>
+	        	<li><a href="https://www.linkedin.com/in/pratik-mangalore/"><img src="images/Linkedin_logo.png" ></a></li>
+	        	<li><a href="https://github.com/Devoidofevil/"><img src="images/github_logo.png"></a></li>
+	        	<li><a href="https://www.facebook.com/pratik.mangalore"><img src="images/facebook_logo.png"></a></li>
+	        	<li><a href="mailto:prat.mangalore@g.ucla.edu"><img src="images/gmail_logo.png"></a></li>
+	        	</ul>
+	        	</nav>
 	      	</section>
 	    </div>
 	         
