--- a/contact_page.html
+++ b/contact_page.html
@@ -21,7 +21,7 @@
 	    	<nav class="navigation">
 				<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="#">Resume</a></li>
+				<li><a href="resume.pdf">Resume</a></li>
 				<li><a href="#">Blog</a></li>
 				<li><a href="contact_page.html">Contact</a></li>
 				</ul>
