--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 	    	<h1>Pratik Mangalore</h1>
 	    	<nav class="navigation">
 				<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">Resume</a></li>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="resume.pdf">Resume</a></li>
 				<li><a href="#">Blog</a></li>
 				<li><a href="contact_page.html">Contact</a></li>
 				</ul>
