--- a/contact_page.html
+++ b/contact_page.html
@@ -22,7 +22,7 @@
 				<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="resume.pdf">Resume</a></li>
-				<li><a href="#">Blog</a></li>
+				<li><a href="blog.html">Blog</a></li>
 				<li><a href="contact_page.html">Contact</a></li>
 				</ul>
 		    </nav>
