Initial Blog done

--- a/blog.html
+++ b/blog.html
@@ -35,6 +35,15 @@
 	      	</section>
 	             
 	      	<section id="blog-container">
+	      		<nav class="article">
+	      			<ul>
+	      			<li>The answer to the chess puzzle is to move the rook on G6 to C6. While that does put a discovered check on the black king from the bishop, notice that black rook on B7 can simply eliminate the bishop on H7, hence prolonging the game. This puzzle is considered to be one of the more trickier ones to solve. If you were able to solve it, congratulations!<br><br>
+	      			<div id = "chess-puzzle">
+	        			<img id = "chess_puzzle_sol" src = "images/chess_puzzle_sol.png">
+	        		</div>
+	      			</li>
+	      			</ul>
+	      		</nav>
 	      	</section>
 	    </div>
 	         
