--- a/contact_page.html
+++ b/contact_page.html
@@ -27,28 +27,26 @@
 				</ul>
 		    </nav>
 	  	</header>
-	    <div id="content" class="clearfix">
-	      	<section id="left-sidebar">
-	        	<div id = "profile-picture-wrapper">
-	        		<img id = "DP" src = "images/profile_picture.jpg">
-	        	</div>
-	      	</section>
-	             
-	      	<section id="contacts">
-	        	<nav class="contact-navigation">
-	        	<ul>
-	        	<li><a href="https://www.linkedin.com/in/pratik-mangalore/"><img src="images/Linkedin_logo.png" ></a></li>
-	        	<li><a href="https://github.com/Devoidofevil/"><img src="images/github_logo.png"></a></li>
-	        	<li><a href="https://www.facebook.com/pratik.mangalore"><img src="images/facebook_logo.png"></a></li>
-	        	<li><a href="mailto:prat.mangalore@g.ucla.edu"><img src="images/gmail_logo.png"></a></li>
-	        	</ul>
-	        	</nav>
-	      	</section>
-	    </div>
-	         
+	    <div class="container">
+			<div class="row">
+			    <div class="column">
+			      <img src="images/ucla_contact_page.jpg" style="width:100%">
+			    </div>
+			    <div class="column">
+			      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSch13cL1ppuS8q0e6RAYDBnSBz38AaphEmgjjbvWrGA7qtkPw/viewform?embedded=true" width="640" height="470" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+			    </div>
+			</div>
+		</div> 
+		<nav class="contact-navigation">
+			<ul>
+				<li><a href="https://www.linkedin.com/in/pratik-mangalore/"><img src = "images/linkedin_logo.png"></a></li>
+				<li><a href="https://github.com/pratmangalore"><img src = "images/github_logo.png"></a></li>
+				<li><a href="https://www.facebook.com/pratik.mangalore"><img src = "images/facebook_logo.png"></a></li>
+			</ul>
+		</nav> 
 	    <footer>
 	      <p>© 2018 Pratik Mangalore.</p>
 	    </footer>
-	  </div>
+	</div>
 </body>
 </html>
