--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	    </div>
 	         
 	    <footer>
-	      <p>© 2018 Pratik Mangalore.</p>
+	      	<p id = "Copyright">© 2018 Pratik Mangalore.</p>
 	    </footer>
 	  </div>
 </body>
