--- a/contact_page.html
+++ b/contact_page.html
@@ -1,52 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<title>Pratik Mangalore</title>
-<meta name="description" content="Pratik Mangalore's personal blog and website. Here I share content and ideas I find interesting and also list my accomplishments">
-<meta name="author" content="Pratik Mangalore">
-<meta name="viewport" content="width=device-width; initial-scale=1.0">
-<link rel="shortcut icon" href="/favicon.ico">
-<link rel="apple-touch-icon" href="/apple-touch-icon.png">
-<link rel="stylesheet" href="css/style.css" />
-<link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<title>Pratik Mangalore</title>
+	<meta name="description" content="Pratik Mangalore's personal blog and website. Here I share content and ideas I find interesting and also list my accomplishments.">
+	<meta name="author" content="Pratik Mangalore">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="shortcut icon" href="./images/Linkedin_logo.png">
+	<!-- <link rel="apple-touch-icon" href="/apple-touch-icon.png"> -->
+	<link rel="stylesheet" href="css/style.css" />
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 </head>
+
 <body>
 	<div class="bg-image"></div>
 	<div id="wrapper">
-	  	<header id="header">
-	    	<h1>Pratik Mangalore</h1>
-	    	<nav class="navigation">
+		<header id="header">
+			<h1>Pratik Mangalore</h1>
+			<nav class="navigation">
 				<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="resume.pdf">Resume</a></li>
-				<li><a href="blog.html">Blog</a></li>
-				<li><a href="contact_page.html">Contact</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="resume.pdf" target="_blank">Resume</a></li>
+					<li><a href="blog.html">Blog</a></li>
+					<li><a href="contact_page.html">Contact</a></li>
 				</ul>
-		    </nav>
-	  	</header>
-	    <div class="container">
+			</nav>
+		</header>
+		<div class="container">
 			<div class="row">
-			    <div class="column">
-			      <img src="images/ucla_contact_page.jpg" style="width:100%">
-			    </div>
-			    <div class="column">
-			      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSch13cL1ppuS8q0e6RAYDBnSBz38AaphEmgjjbvWrGA7qtkPw/viewform?embedded=true" width="640" height="470" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-			    </div>
+				<div>
+					<img src="images/ucla_contact_page.jpg" style="width:100%">
+				</div>
+				<div class="column">
+					<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSch13cL1ppuS8q0e6RAYDBnSBz38AaphEmgjjbvWrGA7qtkPw/viewform?embedded=true"
+					 width="640" height="470" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+				</div>
 			</div>
-		</div> 
+		</div>
 		<nav class="contact-navigation">
 			<ul>
-				<li><a href="https://www.linkedin.com/in/pratik-mangalore/"><img src = "images/linkedin_logo.png"></a></li>
-				<li><a href="https://github.com/pratmangalore"><img src = "images/github_logo.png"></a></li>
-				<li><a href="https://www.facebook.com/pratik.mangalore"><img src = "images/facebook_logo.png"></a></li>
+				<li><a href="https://www.linkedin.com/in/pratik-mangalore/"><img src="images/linkedin_logo.png"></a></li>
+				<li><a href="https://github.com/pratmangalore"><img src="images/github_logo.png"></a></li>
+				<li><a href="https://www.facebook.com/pratik.mangalore"><img src="images/facebook_logo.png"></a></li>
 			</ul>
-		</nav> 
-	    <footer>
-	      <p>© 2018 Pratik Mangalore.</p>
-	    </footer>
+		</nav>
+		<footer>
+			<p>© 2018 Pratik Mangalore.</p>
+		</footer>
 	</div>
 </body>
+
 </html>
