--- a/index.html
+++ b/index.html
@@ -1,55 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<title>Pratik Mangalore</title>
-<meta name="description" content="Pratik Mangalore's personal blog and website. Here I share content and ideas I find interesting and also list my accomplishments">
-<meta name="author" content="Pratik Mangalore">
-<meta name="viewport" content="width=device-width; initial-scale=1.0">
-<link rel="shortcut icon" href="/favicon.ico">
-<link rel="apple-touch-icon" href="/apple-touch-icon.png">
-<link rel="stylesheet" href="css/style.css" />
-<link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<title>Pratik Mangalore</title>
+	<meta name="description" content="Pratik Mangalore's personal blog and website. Here I share content and ideas I find interesting and also list my accomplishments.">
+	<meta name="author" content="Pratik Mangalore">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="shortcut icon" href="./images/Linkedin_logo.png">
+	<!-- <link rel="apple-touch-icon" href="/apple-touch-icon.png"> -->
+	<link rel="stylesheet" href="css/style.css" />
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
 </head>
+
 <body>
-	<div class="bg-image"></div>
 	<div id="wrapper">
-	  	<header id="header">
-	    	<h1>Pratik Mangalore</h1>
-	    	<nav class="navigation">
+		<header id="header">
+			<h1>Pratik Mangalore</h1>
+			<nav class="navigation">
 				<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="resume.pdf">Resume</a></li>
-				<li><a href="blog.html">Blog</a></li>
-				<li><a href="contact_page.html">Contact</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="resume.pdf" target="_blank">Resume</a></li>
+					<li><a href="blog.html">Blog</a></li>
+					<li><a href="contact_page.html">Contact</a></li>
 				</ul>
-		    </nav>
-	  	</header>
-	    <div id="content" class="clearfix">
-	      	<section id="left-sidebar">
-	        	<div id = "profile-picture-wrapper">
-	        		<img id = "DP" src = "images/profile_picture.jpg">
-	        	</div>
-	      	</section>
-	             
-	      	<section id="right">
-	        	<div id = "about">
-	        		<p>Hello! I am a first year graduate student pursuing my Master's in Computer Science at the University of California, Los Angeles. I am keenly interested in Machine Learning, Statistical Modelling, Artificial Intelligence, and building clean, scalable software. <br><br> <u>To the Recruiter</u>: - Please find my resume by clicking the button displayed above. Feel free to contact me if you believe I can contribute to your organization! <br><br> To the curious Reader: - I enjoy chess and like to search for new and interesting articles in the domains of Machine Learning, Human Evolution, Cognitive Science and Philosophy to name a few! Feel free to contact me via mail.</p>
-	        	</div>
-	        	<div id = "chess-ques">
-	        		<p>Can you solve this chess puzzle composed by Karl Fabel, Ratselstunde 1952? By playing what move can white NOT checkmate black in 1?</p>
-	        	</div>
-	        	<div id = "chess-puzzle">
-	        		<img id = "chess_puzzle" src = "images/chess_puzzle.png">
-	        	</div>
-	      	</section>
-	    </div>
-	         
-	    <footer>
-	      	<p id = "Copyright">© 2018 Pratik Mangalore.</p>
-	    </footer>
-	  </div>
+			</nav>
+		</header>
+		<div id="content" class="clearfix">
+			<section id="left-sidebar">
+				<div id="profile-picture-wrapper">
+					<img id="DP" src="images/profile_picture.jpg">
+				</div>
+			</section>
+
+			<section id="right">
+				<div>
+					<p>Hello! I am a first year graduate student pursuing my Master's in Computer Science at the University of
+						California, Los Angeles. I am keenly interested in Machine Learning, Statistical Modelling, Artificial
+						Intelligence, and building clean, scalable software. <br><br> <u>To the Recruiter</u>: - Please find my resume by
+						clicking the button displayed above. Feel free to contact me if you believe I can contribute to your
+						organization! <br><br> To the curious Reader: - I enjoy chess and like to search for new and interesting articles
+						in the domains of Machine Learning, Human Evolution, Cognitive Science and Philosophy to name a few! Feel free to
+						contact me via mail.</p>
+				</div>
+				<div>
+					<p>Can you solve this chess puzzle composed by Karl Fabel, Ratselstunde 1952? By playing what move can white NOT
+						checkmate black in 1?</p>
+				</div>
+				<div id="chess-puzzle">
+					<!-- <img id="chess_puzzle" src="images/chess_puzzle.png"> -->
+					<img src="images/chess_puzzle.png">
+				</div>
+			</section>
+		</div>
+
+		<footer>
+			<p>© 2018 Pratik Mangalore</p>
+		</footer>
+	</div>
 </body>
+
 </html>
