--- a/contact_page.html
+++ b/contact_page.html
@@ -27,17 +27,35 @@
 				</ul>
 			</nav>
 		</header>
-		<div class="container">
-			<div class="row">
-				<div>
-					<img src="images/ucla_contact_page.jpg" style="width:100%">
+
+		<section class="ct-us-parent" id="book_now">
+				<p class="ct-us-header">Get In Touch</p>
+				<p class="ct-us-header">Drop me a message below, I'll hope to reply as soon as I can!</p>
+				<div class="form-container">
+					<form class="form-area" id="myForm" name="submit-to-google-sheet">
+						<div class="row">
+								<input name="Email ID" placeholder="Email ID*" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$" 
+								onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email ID*'" class="mb-20 form-control" type="email" required>
+
+								<input name="Name" placeholder="Full Name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Name'" class="mb-20 form-control"
+								type="text">
+
+								<textarea name="Description" class="form-control" name="message" placeholder="Description"
+									onfocus="this.placeholder = ''" onblur="this.placeholder = 'Description'" id="Description"></textarea>
+
+								<button class="snd-btn" type="submit" onclick=removeWhiteSpace()>Send it!</button>
+						</div>
+					</form>
+					<div class="js-loading is-hidden">
+						<div class="loading-spinner">
+							<svg>
+								<circle cx="25" cy="25" r="20" fill="none" stroke-width="2" stroke-miterlimit="10" />
+							</svg>
+						</div>
+					</div>
 				</div>
-				<div class="column">
-					<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSch13cL1ppuS8q0e6RAYDBnSBz38AaphEmgjjbvWrGA7qtkPw/viewform?embedded=true"
-					 width="640" height="470" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-				</div>
-			</div>
-		</div>
+			</section>
+
 		<nav class="contact-navigation">
 			<ul>
 				<li><a href="https://www.linkedin.com/in/pratik-mangalore/"><img src="images/linkedin_logo.png"></a></li>
@@ -45,6 +63,16 @@
 				<li><a href="https://www.facebook.com/pratik.mangalore"><img src="images/facebook_logo.png"></a></li>
 			</ul>
 		</nav>
+
+		<script>
+				function removeWhiteSpace() {
+					var myTxtArea = document.getElementById('Description');
+					// console.log(myTxtArea.value, myTxtArea.value.replace(/^\s*|\s*$/g,''));
+					myTxtArea.value = myTxtArea.value.replace(/^\s*|\s*$/g, '');
+				}
+		</script>
+		<script src="js/contact_us.js"></script>
+
 		<footer>
 			<p>© 2018 Pratik Mangalore.</p>
 		</footer>
