--- a/contact_page.html
+++ b/contact_page.html
@@ -58,7 +58,7 @@
 
 		<nav class="contact-navigation">
 			<ul>
-				<li><a href="https://www.linkedin.com/in/pratik-mangalore/"><img src="images/linkedin_logo.png"></a></li>
+				<li><a href="https://www.linkedin.com/in/pratik-mangalore/"><img src="images/Linkedin_logo.png"></a></li>
 				<li><a href="https://github.com/pratmangalore"><img src="images/github_logo.png"></a></li>
 				<li><a href="https://www.facebook.com/pratik.mangalore"><img src="images/facebook_logo.png"></a></li>
 			</ul>
