--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="shortcut icon" href="./images/Linkedin_logo.png">
 	<!-- <link rel="apple-touch-icon" href="/apple-touch-icon.png"> -->
 	<link rel="stylesheet" href="css/style.css" />
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
 </head>
 
 <body>
@@ -54,8 +54,16 @@
 			</section>
 		</div>
 
+		<nav class="contact-navigation">
+			<ul>
+				<li><a href="https://www.linkedin.com/in/pratik-mangalore/"><img src="images/Linkedin_logo.png"></a></li>
+				<li><a href="https://github.com/pratmangalore"><img src="images/github_logo.png"></a></li>
+				<li><a href="https://www.facebook.com/pratik.mangalore"><img src="images/facebook_logo.png"></a></li>
+			</ul>
+		</nav>
+
 		<footer>
-			<p>© 2018 Pratik Mangalore</p>
+			<p>© 2018 Pratik Mangalore.</p>
 		</footer>
 	</div>
 </body>
