--- a/contact_page.html
+++ b/contact_page.html
@@ -10,7 +10,7 @@
 	<link rel="shortcut icon" href="./images/Linkedin_logo.png">
 	<!-- <link rel="apple-touch-icon" href="/apple-touch-icon.png"> -->
 	<link rel="stylesheet" href="css/style.css" />
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
 </head>
 
 <body>
