Made changes to index page

--- a/blog.html
+++ b/blog.html
@@ -39,7 +39,7 @@
 						black king from the bishop, notice that black rook on B7 can simply eliminate the bishop on H7, hence prolonging
 						the game. This puzzle is considered to be one of the more trickier ones to solve. If you were able to solve it,
 						congratulations!<br><br>
-						<div id="chess-puzzle">
+						<div id="chess_puzzle">
 							<img id="chess_puzzle_sol" src="images/chess_puzzle_sol.png">
 						</div>
 						<br>Reference :- <a href="https://www.chess.com/forum/view/more-puzzles/white-to-move-and-not-mate2">Click Here</a>
