--- a/index.html
+++ b/index.html
@@ -47,9 +47,8 @@
 					<p>Can you solve this chess puzzle composed by Karl Fabel, Ratselstunde 1952? By playing what move can white NOT
 						checkmate black in 1?</p>
 				</div>
-				<div id="chess-puzzle">
-					<!-- <img id="chess_puzzle" src="images/chess_puzzle.png"> -->
-					<img src="images/chess_puzzle.png">
+				<div>
+					<img id='chess_puzzle_sol' src="images/chess_puzzle.png">
 				</div>
 			</section>
 		</div>
